# layered-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  data.json  index.html  output.json
data/: data  output.json  test1
p3_crossing_minimization/: BarycenterHeuristic.cc  ForsterConstraintResolver.h  GraphInfoHolder.h  ICrossingMinimizationHeuristic.h  LayerSweepCrossingMinimizer.h  LayerTotalPortDistributor.cc  LayerTotalPortDistributor.h  LongEdgeSplitter.h  NodeRelativePortDistributor.cc  SweepCopy.h
p3_crossing_minimization/counting/: BinaryIndexedTree.h  CrossMinUtil.cc  CrossingCounter.h  HyperedgeCrossingsCounter.h  Initializable.cc  Initializable.h
p3_crossing_minimization/greedyswitch/: CrossingMatrixFiller.h  GreedySwitchHeuristic.cc  SwitchDecider.h
scripts/: jsonTransfer.js
src/: Edge.cc  Edge.h  GeneticOptimizer.hpp  Graph.cc  Graph.h  Layer.cc  Layer.h  LayeredEnginee.cc  LayeredEnginee.h  Math.hpp  Node.cc  Node.h  NodeProto.cc  NodeProto.h  Port.cc  Port.h  Replacement.hpp  Shape.cc  Shape.h  main.cc
src/Data/: default.ng
src/Graph/: NodeGraph.cpp  NodeGraph.hpp
src/components/: SimpleRowGraphPlacer.cc  SimpleRowGraphPlacer.h
src/data/: test1
src/helper/: PortGraogFitness.cc  PortGraogFitness.hpp  PortGraphPopulationGenerator.hpp
src/math/: KVector.cc  KVector.h  KVectorChain.cc  KVectorChain.h  Margin.cc  Margin.h  Spacing.cc  Spacing.h
src/opts/: CrossMinType.h  NodeSide.h  PortType.cc  PortType.h
src/utils/: ComponentsProcessor.cc  ComponentsProcessor.h  (+9 more)
temp/: HyperedgeDummyMerger.h  InvertedPortProcessor.h
(+71 files in other folders)
